# tweet-sentiment-api

./: .env.example  .gitignore  README.md  app.py  config.py  docker-compose.yml  load_sample_data.py  pyproject.toml  setup_database.py
api/: errors.py  routes.py
db/: connection.py  queries.py
ml/: evaluation.py  model.py  training.py
models/: sentiment_model.pkl
reports/: confusion_matrices.json  metrics.json
scripts/: load_sample_data.py  retrain_model.py  setup_cronjob.sh  setup_database.py
scripts/data/: tweets_sample.csv
utils/: config.py  model_loader.py  path.py
