[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-api"
version = "1.0.0"
description = "API d'analyse de sentiments sur tweets"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "mysql-connector-python>=8.2.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "reportlab>=4.0.7",
    "joblib>=1.3.2",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["ml", "db", "api", "logs", "models", "reports"]